public class Pair<A, B> {
    public A a;
    public final B b;

    public Pair(A a1, B b1) {
        this.a = a1;
        this.b = b1;
    }
}
