public class Sextet <A, B, C, D, E, F>{
    public final A a;
    public final B b;
    public final C c;
    public final D d;
    public final E e;
    public final F f;

    public Sextet(A a1, B b1, C c1, D d1, E e1, F f1) {
        this.a = a1;
        this.b = b1;
        this.c = c1;
        this.d = d1;
        this.e = e1;
        this.f = f1;
    }
}