@startuml

title __PROJEKTPROZE's Class Diagram__\n

  namespace  {
    class CorrectPlaces {
    }
  }
  

  namespace  {
    class EndGameMenu {
    }
  }
  

  namespace  {
    class Game {
    }
  }
  

  namespace  {
    class GetValuesFromReader {
    }
  }
  

  namespace  {
    class HighScore {
    }
  }
  

  namespace  {
    class HighscoreWindow {
    }
  }
  

  namespace  {
    class HighscoresParser {
    }
  }
  

  namespace  {
    class Keys {
    }
  }
  

  namespace  {
    class Level {
    }
  }
  

  namespace  {
    class MainWindow {
    }
  }
  

  namespace  {
    class MenuWindow {
    }
  }
  

  namespace  {
    class NextLevelMenu {
    }
  }
  

  namespace  {
    class NickPicker {
    }
  }
  

  namespace  {
    class Nonet {
    }
  }
  

  namespace  {
    class Obstacle {
    }
  }
  

  namespace  {
    class Pair {
    }
  }
  

  namespace  {
    class PauseMenu {
    }
  }
  

  namespace  {
    class Player {
    }
  }
  

  namespace  {
    class Quintet {
    }
  }
  

  namespace  {
    class Reader {
    }
  }
  

  namespace  {
    class Sextet {
    }
  }
  

  namespace  {
    class Teleport {
    }
  }
  

  namespace  {
    class Walls {
    }
  }
  

  CorrectPlaces -up-|> javax.swing.JPanel
  CorrectPlaces o-- Level : lev
  CorrectPlaces o-- Reader : reader
  EndGameMenu -up-|> javax.swing.JFrame
  EndGameMenu o-- HighscoresParser : parser
  Game .up.|> java.lang.Runnable
  Game -up-|> javax.swing.JComponent
  Game o-- Game.GameState : gameState
  Game o-- Level : lev
  Game o-- MainWindow : mainWindow
  Game o-- PauseMenu : pauseMenu
  Game o-- Player : player
  HighscoreWindow -up-|> javax.swing.JFrame
  HighscoreWindow o-- HighscoresParser : parser
  Keys -up-|> java.awt.event.KeyAdapter
  Keys o-- Game : game
  Keys o-- Player : player
  MainWindow -up-|> javax.swing.JFrame
  MainWindow o-- Keys : keys
  MainWindow o-- Game : game
  MenuWindow -up-|> javax.swing.JFrame
  NextLevelMenu -up-|> javax.swing.JFrame
  NickPicker -up-|> javax.swing.JFrame
  Nonet o-- A : a
  Nonet o-- B : b
  Nonet o-- C : c
  Nonet o-- D : d
  Nonet o-- E : e
  Nonet o-- F : f
  Nonet o-- G : g
  Nonet o-- H : h
  Nonet o-- I : i
  Obstacle -up-|> javax.swing.JComponent
  Obstacle o-- Reader : reader
  Obstacle o-- Level : lev
  Pair o-- A : a
  Pair o-- B : b
  PauseMenu -up-|> javax.swing.JComponent
  PauseMenu o-- Game : game
  Player -up-|> javax.swing.JComponent
  Player o-- Level : lev
  Player o-- Reader : reader
  Quintet o-- A : a
  Quintet o-- B : b
  Quintet o-- C : c
  Quintet o-- D : d
  Quintet o-- E : e
  Sextet o-- A : a
  Sextet o-- B : b
  Sextet o-- C : c
  Sextet o-- D : d
  Sextet o-- E : e
  Sextet o-- F : f
  Teleport -up-|> javax.swing.JComponent
  Teleport o-- Reader : reader
  Teleport o-- Level : lev
  Walls -up-|> javax.swing.JComponent
  Walls o-- Level : lev
  Walls o-- Reader : reader


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
